hugo/2.4.5/content/setup/admin-console-diff.md
---
title: Differences with the Administration Console
date: 2021-09-01
draft: false
description: An overview of the differences with the Oracle WebLogic Administration Console.
weight: 5
---

The WebLogic Remote Console is distinct from the WebLogic Server Administration Console that is deployed as part of your WebLogic domain. As you explore the WebLogic Remote Console, you'll notice key differences between the two consoles:
* The user interface has been completely redesigned to conform to the Oracle Redwood theme included with Oracle JET.
* The configuration and monitoring runtime content is separated into separate pages in the Remote Console. In the WebLogic Server Administration Console, the configuration and runtime information is presented on one page.
* The Change Center is now expressed as a Shopping Cart with a list of pending changes. After you're committed your changes, you can see which servers require a restart on the Monitoring Perspective > Environment > Servers page.
* Instead of logging directly into the Administration Console deployed in a WebLogic domain, the Remote Console connects to the Administration Server in a WebLogic domain, with the credentials supplied by the user, using WebLogic REST APIs.
* Objects that were previously represented in a JNDI tree now appear as entries in a table under the **JNDI** tab on the  Monitoring > Environment > Servers > *serverName* page.

For information on the WebLogic Server Administration Console, see the online help for [12.2.1.3](https://docs.oracle.com/middleware/12213/wls/WLACH/index.html), [12.2.1.4](https://docs.oracle.com/en/middleware/fusion-middleware/weblogic-server/12.2.1.4/wlach/index.html), or [14.1.1.0](https://docs-uat.us.oracle.com/en/middleware/standalone/weblogic-server/14.1.1.0/wlach/index.html).
